# ugdown

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml
src/: main.rs
src/downloader/: lux.rs  mod.rs  watch.rs  youget.rs  youtubedl.rs
src/ui/: add_url.fl  engine_manager.fl  main.fl  option.fl  tool_downloader.fl
src/view/: add_url_dialog.rs  dialog.rs  engine_manager.rs  mainform.rs  mod.rs  task_table.rs  tool_downloader.rs  utils.rs
